Diverse Änderungen - von allem etwas.
git-svn-id: https://svn.libreccm.org/ccm/trunk@1114 8810af33-2d31-482b-a856-94f89814c4df